# inkystarmap

./: README.md  inkystarmap_0.3.0.deb  inkystarmap_0.4.0.deb  inkystarmap_0.5.0.deb  pyproject.toml
src/inkystarmap/: gradientmap_inky.py  inkystarmap.py  orthomap_planets_moon_inky.py  resize_to_inky.py  timeandlocation.py
