[tool.poetry]
name = "inkystarmap"
version = "0.1.0"
description = "Makes a map of the night sky on an Inky Impressions e-ink display"
authors = ["Marcel-Jan Krijgsman <github@marcel-jan.eu>"]
readme = "README.md"
packages = [{include = "inkystarmap", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
starplot = "^0.12.2"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
