[project]
name = "inkystarmap"
version = "0.2.0"
description = "Makes a map of the night sky on an Inky Impressions e-ink display"
authors = [
    {name = "Marcel-Jan Krijgsman", email = "github@marcel-jan.eu"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytz>=2025.2",
    "starplot>=0.16.1",
]
